RESOLVED FIXED136108
start adding WEBCORE_EXPORT macro
https://bugs.webkit.org/show_bug.cgi?id=136108
Summary start adding WEBCORE_EXPORT macro
Alex Christensen
Reported 2014-08-20 10:35:09 PDT
The export symbol lists are another step in the build system that I don't want to port to CMake, so this is a good time to get rid of them on Mac and Windows. This is the first step. I've still got about 2000 to go.
Attachments
Patch (221.53 KB, patch)
2014-08-20 10:43 PDT, Alex Christensen
no flags
Patch (199.85 KB, patch)
2014-08-20 13:57 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-08-20 10:43:18 PDT
Antti Koivisto
Comment 2 2014-08-20 10:51:05 PDT
Comment on attachment 236878 [details] Patch rs=me
Alex Christensen
Comment 3 2014-08-20 10:59:20 PDT
committed almost all of this to http://trac.webkit.org/changeset/172798
WebKit Commit Bot
Comment 4 2014-08-20 11:31:57 PDT
Re-opened since this is blocked by bug 136113
Alex Christensen
Comment 5 2014-08-20 13:57:19 PDT
WebKit Commit Bot
Comment 6 2014-08-20 13:58:53 PDT
Attachment 236895 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/wak/WKView.h:100: The parameter name "rect" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:100: The parameter name "context" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:100: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:106: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:106: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:108: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:108: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:109: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:109: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:113: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:113: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:115: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:115: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:116: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:116: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:119: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:119: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:125: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:125: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:126: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:126: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:135: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:135: The parameter name "r" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:135: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:136: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:136: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:142: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:142: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:144: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:144: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:145: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:145: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/ios/wak/WKView.h:146: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WKView.h:146: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/graphics/Color.h:117: The parameter name "a" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/graphics/Color.h:118: The parameter name "b" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/graphics/transforms/AffineTransform.h:54: The parameter name "b" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/graphics/transforms/AffineTransform.h:54: The parameter name "d" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/graphics/transforms/AffineTransform.h:54: The parameter name "e" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/loader/appcache/ApplicationCacheStorage.h:59: The parameter name "size" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/loader/appcache/ApplicationCacheStorage.h:65: The parameter name "quota" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WebCoreThreadMessage.h:53: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WebCoreThreadMessage.h:56: The parameter name "invocation" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WebCoreThreadMessage.h:60: The parameter name "invocation" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/wak/WebCoreThreadMessage.h:63: The parameter name "object" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/sql/SQLiteDatabase.h:142: Missing space inside { }. [whitespace/braces] [5] ERROR: Source/WebCore/loader/cache/CachedResource.h:223: The parameter name "h" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/editing/Editor.h:333: The parameter name "element" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/dom/Document.h:571: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] ERROR: Source/WebCore/dom/Document.h:573: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] ERROR: Source/WebCore/dom/Document.h:574: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] ERROR: Source/WebCore/platform/network/AuthenticationChallengeBase.h:51: The parameter name "a" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 52 in 107 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 7 2014-08-20 13:59:05 PDT
Added #define WEBCORE_EXPORT to config.h in TestWebKitAPI and WebKit2 to prevent compile failures that we saw in r172798.
Alex Christensen
Comment 8 2014-08-20 14:57:52 PDT
Daniel Bates
Comment 9 2014-08-25 16:10:29 PDT
(In reply to comment #8) > recommitted to http://trac.webkit.org/changeset/172814 This broke the iOS build. In particular, DumpRenderTree fails to compile on iOS. Used a similar approach as in TestWebKitAPI to stub out the macro define WEBCORE_EXPORT and committed this in <http://trac.webkit.org/changeset/172942>.
Daniel Bates
Comment 10 2014-08-28 15:19:42 PDT
Fixed more iOS WebKit clients in <http://trac.webkit.org/changeset/173090>.
Note You need to log in before you can comment on or make changes to this bug.