Fix the iOS DumpRenderTree build after <http://trac.webkit.org/changeset/172814/> (https://bugs.webkit.org/show_bug.cgi?id=136108)

Use a similar approach as in TestWebKitAPI/config.h and define a stub for the macro define WEBCORE_EXPORT
so that we can compile DumpRenderTree for iOS.

* DumpRenderTree/config.h:

Canonical link: https://commits.webkit.org/154056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172942 268f45cc-cd09-0410-ab3c-d52691b4dbfc