Tools/DumpRenderTree/config.h
@@ -28,6 +28,9 @@
 #include <wtf/ExportMacros.h>
 #include <runtime/JSExportMacros.h>
 
+// This is needed because we include WebCore's headers.
+#define WEBCORE_EXPORT
+
 #ifdef __cplusplus
 #undef new
 #undef delete
